force-app/main/default/objects/Planilla__c/Planilla__c.object-meta.xml
<CustomObject>
    <label>Planilla</label>
    <nameField>
        <displayFormat>PLA-{0000000000}</displayFormat>
        <label>Correlativo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planillas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>