force-app/main/default/objects/Planilla__c/fields/Cantidad_empleados__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_empleados__c</fullName>
    <label>Cantidad de empleados</label>
    <summaryForeignKey>Contenido_Planilla__c.Planilla__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>