force-app/main/default/objects/Planilla__c/fields/Creado_por__c.field-meta.xml
<CustomField>
    <fullName>Creado_por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creado por</label>
    <referenceTo>Usuario_Portal_Empresarial__c</referenceTo>
    <relationshipLabel>Planillas</relationshipLabel>
    <relationshipName>Planillas</relationshipName>
    <type>Lookup</type>
</CustomField>