force-app/main/default/objects/Planilla__c/fields/Empresa2__c.field-meta.xml
<CustomField>
    <fullName>Empresa2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Planillas</relationshipLabel>
    <relationshipName>Planillas</relationshipName>
    <type>Lookup</type>
</CustomField>