force-app/main/default/objects/Planilla__c/fields/ErrorPlanillasEnviadas__c.field-meta.xml
<CustomField>
    <fullName>ErrorPlanillasEnviadas__c</fullName>
    <label>ErrorPlanillasEnviadas</label>
    <length>150</length>
    <type>Text</type>
</CustomField>