force-app/main/default/objects/Planilla__c/fields/Estado2__c.field-meta.xml
<CustomField>
    <fullName>Estado2__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nueva</fullName>
            </value>
            <value>
                <fullName>Pendiente Aprobación Interna</fullName>
            </value>
            <value>
                <fullName>Aprobada</fullName>
            </value>
            <value>
                <fullName>Pendiente Aprobación Ficohsa</fullName>
            </value>
            <value>
                <fullName>Cerrada</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Error con Sysde</fullName>
            </value>
            <value>
                <fullName>Denegada Ficohsa</fullName>
            </value>
            <value>
                <fullName>Denegada</fullName>
                <isActive>false</isActive>
                <label>Denegada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>