force-app/main/default/objects/Planilla__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <label>Fecha depósito</label>
    <type>Date</type>
</CustomField>