force-app/main/default/objects/Planilla__c/fields/Mes_Aporte__c.field-meta.xml
<CustomField>
    <fullName>Mes_Aporte__c</fullName>
    <label>Mes de Aporte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nombre_Mes</valueSetName>
    </valueSet>
</CustomField>