force-app/main/default/objects/Planilla__c/fields/Respuesta_desde_Sysde__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_desde_Sysde__c</fullName>
    <label>Respuesta desde Sysde</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>