force-app/main/default/objects/Planilla__c/fields/Respuesta_desde_Sysde_aportes__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_desde_Sysde_aportes__c</fullName>
    <label>Respuesta desde Sysde aportes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>