force-app/main/default/objects/Planilla__c/fields/Respuesta_desde_Sysde_aportes_completa__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_desde_Sysde_aportes_completa__c</fullName>
    <label>Respuesta desde Sysde aportes completa</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>