force-app/main/default/objects/Planilla__c/fields/rezago__c.field-meta.xml
<CustomField>
    <fullName>rezago__c</fullName>
    <label>rezago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Si</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>