force-app/main/default/objects/Planilla__c/fields/ServicioEjecutado__c.field-meta.xml
<CustomField>
    <fullName>ServicioEjecutado__c</fullName>
    <label>Servicio Ejecutado</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>