force-app/main/default/objects/Planilla__c/fields/TA_Empleado_Obligatorio__c.field-meta.xml
<CustomField>
    <fullName>TA_Empleado_Obligatorio__c</fullName>
    <label>Total Aporte Empleado Obligatorio</label>
    <summarizedField>Contenido_Planilla__c.Aporte_Empleado_Obligatorio__c</summarizedField>
    <summaryForeignKey>Contenido_Planilla__c.Planilla__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>