force-app/main/default/objects/Planilla__c/fields/TA_Patrono_obligatorio__c.field-meta.xml
<CustomField>
    <fullName>TA_Patrono_obligatorio__c</fullName>
    <label>Total Aporte Patrono obligatorio</label>
    <summarizedField>Contenido_Planilla__c.Aporte_Patrono_obligatorio__c</summarizedField>
    <summaryForeignKey>Contenido_Planilla__c.Planilla__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>