force-app/main/default/objects/Planilla__c/fields/TA_Salarios__c.field-meta.xml
<CustomField>
    <fullName>TA_Salarios__c</fullName>
    <label>TA Salarios</label>
    <summarizedField>Contenido_Planilla__c.Salario__c</summarizedField>
    <summaryForeignKey>Contenido_Planilla__c.Planilla__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>