force-app/main/default/objects/Planilla__c/fields/TA_Seguro_de_Vida__c.field-meta.xml
<CustomField>
    <fullName>TA_Seguro_de_Vida__c</fullName>
    <label>Total Aporte Seguro de Vida</label>
    <summarizedField>Contenido_Planilla__c.Aporte_Seguro_de_Vida__c</summarizedField>
    <summaryForeignKey>Contenido_Planilla__c.Planilla__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>