force-app/main/default/objects/Planilla__c/fields/Tasa_compra__c.field-meta.xml
<CustomField>
    <fullName>Tasa_compra__c</fullName>
    <label>Tasa compra</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>