force-app/main/default/objects/Planilla__c/fields/Tipo_planilla__c.field-meta.xml
<CustomField>
    <fullName>Tipo_planilla__c</fullName>
    <label>Tipo planilla</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generada</fullName>
            </value>
            <value>
                <fullName>Cargada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>