force-app/main/default/objects/Planilla__c/fields/Total_obligatorios__c.field-meta.xml
<CustomField>
    <fullName>Total_obligatorios__c</fullName>
    <formula>TA_Patrono_obligatorio__c + TA_Empleado_Obligatorio__c + Total_Reserva_Laboral2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total obligatorios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>