force-app/main/default/objects/Planilla__c/fields/Total_Reserva_Laboral2__c.field-meta.xml
<CustomField>
    <fullName>Total_Reserva_Laboral2__c</fullName>
    <label>Total Reserva Laboral</label>
    <summarizedField>Contenido_Planilla__c.Reserva_Laboral__c</summarizedField>
    <summaryForeignKey>Contenido_Planilla__c.Planilla__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>