force-app/main/default/objects/Planilla__c/fields/Total_voluntarios__c.field-meta.xml
<CustomField>
    <fullName>Total_voluntarios__c</fullName>
    <formula>TA_Empleado_Voluntario__c + TA_Patrono_Voluntario__c + TA_Empleado_Extraordinario__c + TA_Patrono_Extraordinario__c + TA_Seguro_de_Vida__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total voluntarios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>