force-app/main/default/objects/Planilla__c/fields/Ultima_modificacion__c.field-meta.xml
<CustomField>
    <fullName>Ultima_modificacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultima modificación</label>
    <referenceTo>Usuario_Portal_Empresarial__c</referenceTo>
    <relationshipLabel>Planillas (Ultima modificación)</relationshipLabel>
    <relationshipName>Planillas1</relationshipName>
    <type>Lookup</type>
</CustomField>