force-app/main/default/objects/Planilla__c/fields/Ver__c.field-meta.xml
<CustomField>
    <fullName>Ver__c</fullName>
    <formula>HYPERLINK(&quot;/apex/vfRecibo?id_Planilla=&quot; + Id, &quot;Recibo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ver</label>
    <type>Text</type>
</CustomField>