force-app/main/default/objects/Planilla__c/recordTypes/Seguro_Social.recordType-meta.xml
<RecordType>
    <fullName>Seguro_Social</fullName>
    <active>true</active>
    <label>Seguro Social</label>
</RecordType>