force-app/main/default/objects/Planilla__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Empresa2__c</columns>
    <columns>Estado2__c</columns>
    <columns>Fecha__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>PLA-0000004828</value>
    </filters>
    <label>Todos</label>
</ListView>